# PyraQt

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  FindOCCT.cmake  FindQScintilla.cmake  Packaging.cmake  Qt5Qt6Compat.cmake
docs/: ARCHITECTURE.md  QGIS-python-design.md  QGIS-python-transfer.md  RELEASE.md
docs/dev-plan/: codex-plan-phase1.md  codex-plan-phase2.md  codex-plan-phase3.md  codex-plan-phase4.md  codex-plan-phase5.md  codex-plan-phase6-occt.md  codex-plan-phase7-model-viewer.md  dev-plan.md
packaging/linux/: README.md
plugins/analysis_tools_plugin/: __init__.py  plugin.json
plugins/dependent_workflow_plugin/: __init__.py  plugin.json  report.py
plugins/runtime_command_plugin/: __init__.py  plugin.json
plugins/sample_python_plugin/: __init__.py  plugin.json
resources/: pyraqt_resources.qrc
resources/themes/: dark.qss  light.qss
resources/translations/: pyraqt_en_US.ts  pyraqt_zh_CN.ts
scripts/: file_demo.py  hello_pyra.py  message_demo.py
src/app/: application.cpp  application.h  main.cpp
src/core/cad/: cad_import_manager.cpp  cad_import_manager.h  cad_occt_data.h  cad_property_service.cpp  cad_property_service.h  cad_types.h
src/core/command/: command_descriptor.h  command_manager.cpp  command_manager.h
src/core/config/: config_manager.cpp  config_manager.h
src/core/i18n/: i18n_manager.cpp  i18n_manager.h
src/core/logging/: log_manager.cpp  log_manager.h
src/core/modeling/: model_import_manager.cpp  model_import_manager.h  model_occt_data.h  model_property_service.cpp  model_property_service.h  model_types.h
src/core/plugin/: iplugin.h  plugin_context.cpp  plugin_context.h  plugin_manager.cpp  plugin_manager.h  plugin_types.h
src/core/runtime/: crash_recovery_manager.cpp  crash_recovery_manager.h
src/core/scripting/: pyra_api_bridge.cpp  pyra_api_bridge.h  python_completion_provider.cpp  python_feature_manager.cpp  python_feature_manager.h  python_runner.cpp  python_runtime_manager.cpp  python_runtime_manager.h  script_execution_manager.cpp  script_execution_manager.h  script_process_runner.cpp  script_process_runner.h  script_result.h  script_session.h
src/core/scripting/python/: pyra_api_bridge.cpp  python_completion_provider.cpp  python_completion_provider.h  python_feature_manager.cpp  python_runner.cpp  python_runner.h  python_runtime_manager.cpp  python_runtime_manager.h  script_execution_manager.cpp  script_process_runner.cpp
src/core/theme/: theme_manager.cpp  theme_manager.h
src/core/update/: update_manager.cpp  update_manager.h  update_types.h
src/core/workspace/: workspace_manager.cpp  workspace_manager.h  workspace_types.h
src/plugins/sample_cpp_plugin/: sample_cpp_plugin.cpp  sample_cpp_plugin.h
src/ui/common/: file_dialog_utils.cpp  file_dialog_utils.h  icon_utils.cpp  icon_utils.h  python_completion_line_edit.cpp  python_completion_line_edit.h  python_completion_text_edit.cpp  python_completion_text_edit.h
src/ui/dialogs/: command_palette_dialog.cpp  command_palette_dialog.h  python_tools_dialog.cpp  python_tools_dialog.h  settings_dialog.cpp  settings_dialog.h
src/ui/editor/: cad_document_widget.cpp  cad_document_widget.h  cad_summary_widget.cpp  cad_summary_widget.h  editor_placeholder_widget.cpp  editor_placeholder_widget.h  editor_workspace_widget.cpp  editor_workspace_widget.h  model_document_widget.cpp  model_document_widget.h  model_summary_widget.cpp  model_summary_widget.h  occt_cad_view_widget.cpp  occt_cad_view_widget.h  occt_model_view_widget.cpp  occt_model_view_widget.h  script_editor_widget.cpp  script_editor_widget.h
src/ui/mainwindow/: main_window.cpp  main_window.h
src/ui/panels/files/: file_browser_panel.cpp  file_browser_panel.h
src/ui/panels/plugins/: plugin_manager_panel.cpp  plugin_manager_panel.h
src/ui/panels/properties/: cad_properties_panel.cpp  cad_properties_panel.h  model_properties_panel.cpp  model_properties_panel.h
src/ui/panels/python/: python_console_widget.cpp  python_console_widget.h
tests/: CMakeLists.txt
tests/unit/: test_cad_services.cpp  test_core_services.cpp  test_main.cpp  test_modeling_services.cpp  test_plugin_services.cpp  test_runtime_services.cpp  test_scripting_services.cpp  test_ui_theme.cpp  test_workspace_services.cpp
